# slurm-drmaa

./: .gitignore  .gitmodules  .ignore  .travis.yml  CHANGELOG.md  ChangeLog  Makefile.am  NEWS  README  README.md  autoclean.sh  autodist.sh  autogen.sh  configure.ac  slurm-drmaa.spec
.ci/: Dockerfile  runslurm.sh  slurm.conf  slurmdbd.conf
.github/workflows/: slurm-drmaa.yaml
doc/: Makefile.am  rst.css
m4/: ac_version.sh  acx_pthread.m4  ax_docutils.m4  ax_gcc_warnings.m4  ax_slurm.m4  missing-dev-prog.sh
slurm_drmaa/: Makefile.am  drmaa.c  job.c  job.h  session.c  session.h  slurm_drmaa.conf.example  slurm_drmaa.h  slurm_missing.h  util.c  util.h
test/: Makefile.am  functional-basic.bats  helper_slurm.bash  slurm_ping.c
