# $Id: Makefile.am 227 2010-05-25 13:14:20Z mamonski $
#
# PSNC DRMAA for LoadLeveler
# Copyright (C) 2010 Poznan Supercomputing and Networking Center
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = \
 autoclean.sh \
 autogen.sh \
 m4/missing-dev-prog.sh

SUBDIRS = drmaa_utils slurm_drmaa doc
